--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="position-absolute z15 h-100 w-100 d-none d-md-block d-flex justify-content-center">
-                <video class="header-video" src="videos/Chicken fried rice.mp4" autoplay loop>Your browser does not support the video tag.</video>
+                <video class="header-video" src="videos/Chicken fried rice.mp4" autoplay muted loop>Your browser does not support the video tag.</video>
             </div>
 
         </header>
